--- a/tesseract-shell/pom.xml
+++ b/tesseract-shell/pom.xml
@@ -23,7 +23,7 @@
 			<plugin>
 				<groupId>dml</groupId>
 				<artifactId>dml-maven-plugin</artifactId>
-				<version>1.0-SNAPSHOT</version>
+				<version>2.0-SNAPSHOT</version>
 				<executions>
 					<execution>
 						<goals>
@@ -119,14 +119,25 @@
 	<repositories>
 		<repository>
 			<id>fenix-ashes-maven-repository</id>
-			<url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/fenix-ashes-maven-repository</url>
+			<url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-private</url>
 		</repository>
 	</repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
 			<id>fenix-ashes-maven-repository</id>
-			<url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/fenix-ashes-maven-repository</url>
+			<url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-private</url>
 		</pluginRepository>
 	</pluginRepositories>
+
+	<distributionManagement>
+		<repository>
+			<id>fenix-core-releases</id>
+			<url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/fenix-core-releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>fenix-core-snapshots</id>
+			<url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/fenix-core-snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
