--- a/tesseract-shell/pom.xml
+++ b/tesseract-shell/pom.xml
@@ -118,14 +118,14 @@
 
 	<repositories>
 		<repository>
-			<id>fenix-ashes-maven-repository</id>
+			<id>fenix-ashes-private</id>
 			<url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-private</url>
 		</repository>
 	</repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
-			<id>fenix-ashes-maven-repository</id>
+			<id>fenix-ashes-private</id>
 			<url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-private</url>
 		</pluginRepository>
 	</pluginRepositories>
