--- a/tesseract-shell/pom.xml
+++ b/tesseract-shell/pom.xml
@@ -104,11 +104,18 @@
 			<artifactId>rhino</artifactId>
 			<version>1.7R4</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>jline</groupId>
 			<artifactId>jline</artifactId>
 			<version>2.7</version>
 		</dependency>
+		-->
+		<dependency>
+			<groupId>jline</groupId>
+			<artifactId>jline</artifactId>
+			<version>0.9.94</version>
+		</dependency>	
 		<dependency>
 			<groupId>surftheedge</groupId>
 			<artifactId>mjava</artifactId>
