--- a/domain-browser/pom.xml
+++ b/domain-browser/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>pt.ist</groupId>
 		<artifactId>bennu-project</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<groupId>pt.ist</groupId>
 	<artifactId>domain-browser</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>domain-browser</name>
@@ -30,12 +30,12 @@
 		<dependency>
 			<groupId>pt.ist</groupId>
 			<artifactId>bennu-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>pt.ist</groupId>
 			<artifactId>bennu-vaadin</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
