--- a/tesseract-shell/pom.xml
+++ b/tesseract-shell/pom.xml
@@ -3,16 +3,16 @@
   <parent>
     <groupId>pt.ist</groupId>
     <artifactId>bennu-project-private</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <groupId>pt.ist</groupId>
   <artifactId>tesseract-shell</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>tesseract-shell</name>
   <properties>
-    <version.pt.ist.bennu.core>1.0-SNAPSHOT</version.pt.ist.bennu.core>
-    <version.pt.ist.bennu.vaadin>1.0-SNAPSHOT</version.pt.ist.bennu.vaadin>
+    <version.pt.ist.bennu.core>1.0.0</version.pt.ist.bennu.core>
+    <version.pt.ist.bennu.vaadin>1.0.0</version.pt.ist.bennu.vaadin>
   </properties>
   <dependencies>
     <dependency>
