--- a/tesseract-shell/pom.xml
+++ b/tesseract-shell/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>pt.ist</groupId>
   <artifactId>tesseract-shell</artifactId>
-  <version>1.0.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>tesseract-shell</name>
   <properties>
