--- a/domain-browser/pom.xml
+++ b/domain-browser/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>pt.ist</groupId>
 		<artifactId>bennu-project</artifactId>
-		<version>1.0.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>pt.ist</groupId>
@@ -30,12 +30,12 @@
 		<dependency>
 			<groupId>pt.ist</groupId>
 			<artifactId>bennu-core</artifactId>
-			<version>1.0.0</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>pt.ist</groupId>
 			<artifactId>bennu-vaadin</artifactId>
-			<version>1.0.0</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
