--- a/domain-browser/pom.xml
+++ b/domain-browser/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>pt.ist</groupId>
 	<artifactId>domain-browser</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1-RC1</version>
 	<packaging>jar</packaging>
 
 	<name>domain-browser</name>
