--- a/tesseract-shell/pom.xml
+++ b/tesseract-shell/pom.xml
@@ -1,54 +1,54 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>pt.ist</groupId>
+        <artifactId>bennu-project</artifactId>
+        <version>1.1.0-rc1</version>
+    </parent>
+
     <groupId>pt.ist</groupId>
-    <artifactId>bennu-project</artifactId>
-    <version>1.1.0-rc1</version>
-  </parent>
-  <groupId>pt.ist</groupId>
-  <artifactId>tesseract-shell</artifactId>
-  <version>1.2-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>tesseract-shell</name>
-  <properties>
-    <version.pt.ist.bennu.core>1.1.0-rc1</version.pt.ist.bennu.core>
-    <version.pt.ist.bennu.vaadin>1.1.0-rc1</version.pt.ist.bennu.vaadin>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>pt.ist</groupId>
-      <artifactId>bennu-core</artifactId>
-      <version>${version.pt.ist.bennu.core}</version>
-    </dependency>
-    <dependency>
-      <groupId>pt.ist</groupId>
-      <artifactId>bennu-vaadin</artifactId>
-      <version>${version.pt.ist.bennu.vaadin}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mozilla</groupId>
-      <artifactId>rhino</artifactId>
-    </dependency>
-    <!-- 
-		<dependency>
-			<groupId>jline</groupId>
-			<artifactId>jline</artifactId>
-			<version>2.7</version>
-		</dependency>
-		-->
-    <dependency>
-      <groupId>jline</groupId>
-      <artifactId>jline</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>surftheedge</groupId>
-      <artifactId>mjava</artifactId>
-    </dependency>
-  </dependencies>
-  <repositories>
-    <repository>
-      <id>fenix-ashes-maven-repository</id>
-      <url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-maven-repository</url>
-    </repository>
-  </repositories>
+    <artifactId>tesseract-shell</artifactId>
+    <version>1.2-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>tesseract-shell</name>
+
+    <properties>
+        <version.pt.ist.bennu.core>1.1.0-rc1</version.pt.ist.bennu.core>
+        <version.pt.ist.bennu.vaadin>1.1.0-rc1</version.pt.ist.bennu.vaadin>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>pt.ist</groupId>
+            <artifactId>bennu-core</artifactId>
+            <version>${version.pt.ist.bennu.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>pt.ist</groupId>
+            <artifactId>bennu-vaadin</artifactId>
+            <version>${version.pt.ist.bennu.vaadin}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mozilla</groupId>
+            <artifactId>rhino</artifactId>
+        </dependency>
+        <!-- <dependency> <groupId>jline</groupId> <artifactId>jline</artifactId> <version>2.7</version> </dependency> -->
+        <dependency>
+            <groupId>jline</groupId>
+            <artifactId>jline</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>surftheedge</groupId>
+            <artifactId>mjava</artifactId>
+        </dependency>
+    </dependencies>
+
+    <repositories>
+        <repository>
+            <id>fenix-ashes-maven-repository</id>
+            <url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-maven-repository</url>
+        </repository>
+    </repositories>
 </project>
