--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,14 +10,14 @@
 
     <artifactId>domain-browser-project</artifactId>
     <name>Bennu Domain Browser</name>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2.0-rc2</version>
     <packaging>pom</packaging>
 
     <scm>
         <connection>scm:git:git@github.com:ist-dsi/domain-browser.git</connection>
         <developerConnection>scm:git:git@github.com:ist-dsi/domain-browser.git</developerConnection>
         <url>http://ist-dsi.github.io/domain-browser</url>
-        <tag>HEAD</tag>
+        <tag>v1.2.0-rc2</tag>
     </scm>
 
     <modules>
