Updated dependencies to the release versions

--- a/tesseract-shell/pom.xml
+++ b/tesseract-shell/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>pt.ist</groupId>
         <artifactId>bennu-project</artifactId>
-        <version>1.1.0-rc2</version>
+        <version>1.1.0</version>
         <relativePath />
     </parent>
 
@@ -15,8 +15,8 @@
     <name>tesseract-shell</name>
 
     <properties>
-        <version.pt.ist.bennu.core>1.1.0-rc2</version.pt.ist.bennu.core>
-        <version.pt.ist.bennu.vaadin>1.1.0-rc2</version.pt.ist.bennu.vaadin>
+        <version.pt.ist.bennu.core>1.1.0</version.pt.ist.bennu.core>
+        <version.pt.ist.bennu.vaadin>1.1.0</version.pt.ist.bennu.vaadin>
     </properties>
 
     <dependencies>
