--- a/domain-browser/pom.xml
+++ b/domain-browser/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>pt.ist</groupId>
         <artifactId>bennu-project</artifactId>
-        <version>1.1.0-rc2</version>
+        <version>1.1.0</version>
         <relativePath />
     </parent>
 
@@ -30,12 +30,12 @@
         <dependency>
             <groupId>pt.ist</groupId>
             <artifactId>bennu-core</artifactId>
-            <version>1.1.0-rc2</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>pt.ist</groupId>
             <artifactId>bennu-vaadin</artifactId>
-            <version>1.1.0-rc2</version>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
