--- a/domain-browser/pom.xml
+++ b/domain-browser/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>pt.ist</groupId>
     <artifactId>domain-browser</artifactId>
-    <version>1.4.1</version>
+    <version>1.5.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>domain-browser</name>
