[DSI Releaser] prepare release v1.5.1

--- a/tesseract-shell/pom.xml
+++ b/tesseract-shell/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>pt.ist</groupId>
     <artifactId>tesseract-shell</artifactId>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.5.1</version>
     <packaging>jar</packaging>
     <name>tesseract-shell</name>
 
